# hierin_poc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: ArchitectureScaffolding.md
hierin/cli/: app.py
hierin/cli/controllers/: __init__.py
hierin/cli/validators/: __init__.py
hierin/io/: __init__.py  image_data.py  image_loader.py
scripts/: run_cli.py
