[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hierin"
version = "0.0.0"
description = "HierIN POC - Hierarchical Image Notation - Proof of Concept"
requires-python = ">=3.10"

dependencies = [
  "typer>=0.9",
  "numpy>=1.24",
  "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
]

[tool.setuptools]
packages = ["hierin"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
select = ["E", "F", "I"]
ignore = []
